<?xml version="1.0"?>
<package>
  <name>e100_description</name>
  <version>0.1.0</version>
  <description> This package includes urdf files of RIA-E100 </description>
  <maintainer email="viswanath@gaitechrobotics.com"> Viswanath </maintainer>
  <maintainer email="chenlinkai@gaitechrobotics.com"> Leo Chen </maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
