<?xml version="1.0"?>
<package format="2">
  <name>e100_navigation</name>
  <version>0.0.0</version>
  <description> This package includes launch files for slam and navigation </description>
  <maintainer email="viswanath@gaitech.net"> Viswanath </maintainer>
  <maintainer email="shlee@gaitech.kr"> Brighten Lee </maintainer>
  <license>TODO</license> 
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
<build_depend>navigation</build_depend>
<build_depend>gmapping</build_depend>
<build_depend>hector_slam</build_depend>
<build_depend>teb_local_planner</build_depend>
<build_export_depend>navigation</build_export_depend>
<build_export_depend>gmapping</build_export_depend>
<build_export_depend>hector_slam</build_export_depend>
<build_export_depend>teb_local_planner</build_export_depend>
<exec_depend>navigation</exec_depend>
<exec_depend>gmapping</exec_depend>
<exec_depend>hector_slam</exec_depend>
<exec_depend>teb_local_planner</exec_depend>
</package>