<?xml version="1.0"?>
<package>
  <name>gaitech_sensors</name>
  <version>1.1.0</version>
  <description>Gaitech standard sensors description. URDF and meshses.</description>
  <license>BSD</license>

  <author email="chenlinkai@gaitechrobotics.com">Leo Chen</author>
  <maintainer email="chenlinkai@gaitechrobotics.com"> Leo Chen </maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  
</package>
